Fixes
FIXES:
fixed overlapping elements
TODO: add projects

--- a/myproject/style.css
+++ b/myproject/style.css
@@ -13,7 +13,7 @@ canvas {
   left:0;
   z-index: 1;
   width:inherit;
-  height:100vh;
+  height:max-content;
 }
 
 .comingSoon{
@@ -27,15 +27,16 @@ canvas {
 
 main{
   position:absolute;
-  width: 100vw;
+  width: 100%;
   color: rgb(0, 0, 0);
   background-color: black;
   z-index: 99;
-  width:100%;
   margin: 0px auto;
   padding: 120px 0px;
   z-index: 2;
-  display: grid;
+  display: flex;
+  justify-content:center;
+  align-items: center;
   grid-template-rows: 1fr 1fr 1fr;
   gap: 100px;
   justify-content: center;
@@ -92,7 +93,7 @@ background: white;
   background: rgba(122, 122, 122, 0.8);
   backdrop-filter: blur(5px);
   height: 120px;
-  width:100vw;
+  width:100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -164,7 +165,12 @@ background: white;
   
 }
 
-
+.mainContent{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 .button {
   display: block;
@@ -223,7 +229,7 @@ background: white;
   top: 0;
   left: 0;
   width:100%;
-  height: 5000px;
+  height: max-content;
   background-color: black;
   z-index: 999;
   justify-content: center;
